# ChangeLog for dev-java/glazedlists
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Feb 2009; Alistair Bush <ali_bush@gentoo.org> metadata.xml,
  glazedlists-1.7.0-r2.ebuild:
  QA Fixes. dropped ppc.

  22 Nov 2007; Bernhard Frauendienst <gentoo@nospam.obeliks.de>
  files/glazedlists-1.7.0-build.xml.patch, ++, -glazedlists-1.7.0-r1.ebuild:
  Treetable support was removed by the build.xml patch even though it doesn't
  have any extra deps. It's back in there now. Also, source files for the used
  extensions are packed if USE=source

  11 Nov 2007; Bernhard Frauendienst <gentoo@nospam.obeliks.de> ++,
  -glazedlists-1.7.0.ebuild:
  Now that eclipse-jface etc. are updated (thanks to Serkan), swt support was
  added to glazedlists.

  04 Nov 2007; Bernhard Frauendienst <gentoo@nospam.obeliks.de>
  files/glazedlists-1.7.0-build.xml.patch, glazedlists-1.7.0.ebuild:
  After thinking it over, I decided that a java5 use flag (as normally used)
  would be the better solution after all. There we go.

  04 Nov 2007; Bernhard Frauendienst <gentoo@nospam.obeliks.de>
  +files/glazedlists-1.7.0-build.xml.patch, +metadata.xml,
  +glazedlists-1.7.0.ebuild:
  Initial commit of glazedlists-1.7.0 to java-experimental overlay. So far, it
  supports the extensions jfreechart, jgoodiesforms, nachocalendar and swingx
  (their deps might need some updates so they are available on all platforms).
  The ebuild supports the Java1.4 and Java5 version of glazedlists, Java1.4
  residing in an extra glazedlists-comapt ebuild directory.
