@@ -1,6 +1,5 @@
 AUX glazedlists-1.7.0-build.xml.patch 6224 RMD160 fcdf63f29b495071d8233fd41f2f14a4d46b1106 SHA1 7073242015811907f5ce0206633833f4db6dc32f SHA256 6dfaab0647aca7ab97845ee9ecad5435fb37d151585daab1f637b5f5e769c905
-DIST glazedlists-1.7.0-source_java14.zip 638735 RMD160 45719403cf5bdd1ddbcc50e051098e3bbacac4e0 SHA1 2e40b7275e713ee7c65bd9e079bcf8419a3b8ab1 SHA256 bed004955f4fc0b2cd561698ec690ba4405040239416f6244943fbee4f87544c
 DIST glazedlists-1.7.0-source_java15.zip 879565 RMD160 64008cf55d6ec526b052420448deca3e7cdf77d1 SHA1 6f1629ef5fafb853ec13f0bfe19bd97a92026ad7 SHA256 e3f2370ed80fce8c104f2ac1e820c10b2c691390783e163ec02b2db5e6ab3d36
-EBUILD glazedlists-1.7.0-r2.ebuild 3906 RMD160 fb5b9f4b7d828edfac7123be55aeb8cb495b3bf9 SHA1 16eb3405c975bf694d29d779e6a1d51f4b7d5bd9 SHA256 3f6467c30cf9498b07e9d36578557f3f09a6a30dd3b1b9d08dca42f0760c5de1
-MISC ChangeLog 1571 RMD160 a6bf631abc8ef991509a17d96a9919e91003cbad SHA1 4a77ed34ece7a989fd11a97dbd632594f550af7b SHA256 0ca5cd1a22c2d63a97fa66fad0b8b7fe54da882a164b35edb63a2d274b07ab07
+EBUILD glazedlists-1.7.0-r3.ebuild 3591 RMD160 7a5f98084a214cf2ef70e8aded94c7b04723f5e3 SHA1 e14ad45fe063c11948bc7414b22bd2b1b766e6a5 SHA256 3c25f8c9fa7728b91cd3826064d9e7d2eb0f499d52a7fc765d568e7590b075b3
+MISC ChangeLog 1713 RMD160 1ddda5e71ea47d7dde83349294c35317fb30decc SHA1 50efde0e2c4bb1448985c9a7b60e4c97815a1477 SHA256 273c8f850582a518aee66c632a8c90b671a568824b0490ad7795d744412c3e8b
 MISC metadata.xml 338 RMD160 836e3c84c1876597be88b5e29b865981e04fa8a8 SHA1 c32359ca6ab4f6364855ad5a43236bf45896684d SHA256 b52f60cd4472f3bde8a0bf669113fd2fb5a7ff08a1ac9757f1c94e4a934fb0d6
