@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/glazedlists
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*glazedlists-1.7.0-r3 (12 Feb 2010)
+
+  12 Feb 2010; Vlastimil Babka <caster@gentoo.org>
+  +glazedlists-1.7.0-r3.ebuild:
+  Remove java5 flag.
 
   02 Feb 2009; Alistair Bush <ali_bush@gentoo.org> metadata.xml,
   glazedlists-1.7.0-r2.ebuild:
